# -TERMINAL-GAME-HangMan

./: CMakeLists.txt  README.md
assets/: animals.txt  fruits.txt  periodic.txt
src/: cursor_input.cpp  game_logic.cpp  main.cpp  menu.cpp  ultils.cpp  words.cpp
src/headers/: cursor_input.hpp  game_logic.hpp  menu.hpp  ultils.hpp  words.hpp
